--- a/index.html
+++ b/index.html
@@ -3,9 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- bootstrap -->
+    <link 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" 
+        crossorigin="anonymous"
+        />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
+    <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <div class="row">
+        <!-- Header -->
+        <div class="col-md-12 header">
+            <h1>Weather Dashboard</h1>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class= "col-md-3">
+                <aside>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4>Search for a City:</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <input class="search">
+                            </input>
+                            <button type="button" class="btn btn-primary citySearch" style="background-color: rgb(200, 231, 245); color:  rgb(187, 1, 1);"><i class="fas fa-search-location"></i></button>
+                        </div>
+                    </div>
+                    <!-- cities under search bar -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div id="historySection"></div>
+                        </div>
+                    </div>
+                </aside>
+            </div>
+            <!-- main body -->
+            <div class="col-md-9">
+                <main>
+                    <div class="row">
+                        <article>
+                            <h2 id="cityName">
+                            </h2>
+                        </article>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <section id="fiveDayForecast">
+                            </section>
+                        </div>
+                    </div>
+                </main>
+            </div>
+        </div>
+    </div>
+</body>
+ <!-- JQuery -->
+ <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+ <!-- bootstrap -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
+ <script src="./assets/js/script.js"></script>
+ 
 </body>
 </html>
